@@ -3,34 +3,32 @@
 
 # Cryptomator CLI
 
-This is a minimal command-line application that unlocks vaults of vault format 8.
-After unlocking the vaults, its vault content can be accessed via an embedded WebDAV server.
-The minimum required Java version is JDK 17.
-
-## Disclaimer
-
-:warning: This project is in an early stage and not ready for production use. We recommend using it only for testing and evaluation purposes.
+This is a minimal command-line application that unlocks a single vault of vault format 8 and mounts it into the system.
 
 ## Download and Usage
 
 Download the JAR file via [GitHub Releases](https://github.com/cryptomator/cli/releases).
 
-Cryptomator CLI requires that at least JDK 17 is present on your system.
-
+Cryptomator CLI requires that at least JDK/JRE 22 is present on your system.
 ```sh
-java -jar cryptomator-cli-x.y.z.jar \
-    --vault demoVault=/path/to/vault --password demoVault=topSecret \
-    --vault otherVault=/path/to/differentVault --passwordfile otherVault=/path/to/fileWithPassword \
-    --vault thirdVault=/path/to/thirdVault  \
-    --bind 127.0.0.1 --port 8080
-# You can now mount http://localhost:8080/demoVault/
-# The password for the third vault is read from stdin
+java --enable-native-access="ALL-UNNAMED" -jar cryptomator-cli-x.y.z.jar \
+    --password:stdin \
+    --mounter=org.cryptomator.frontend.fuse.mount.FuseMountProvider \
+    --mountPoint=/home/user/existing/empty/dir \
+    /path/to/vault
 # Be aware that passing the password on the command-line typically makes it visible to anyone on your system!
 ```
 
-## Filesystem Integration
+For a complete list of options, start the jar with the `--help` argument.
+```shell
+java --enable-native-access="ALL-UNNAMED" -jar cryptomator-cli-x.y.z.jar --help
+```
 
-Once the vault is unlocked and the WebDAV server started, you can access the vault by any WebDAV client or directly mounting it in your filesystem.
+## Block Filesystem Integration 
+
+Depending on the chosen mounter, you the vault is automatically integrated into the os.
+If you don't want a direct integration, choose `org.cryptomator.frontend.webdav.mount.FallbackMounter` for `--mounter`.
+It starts a local WebDAV server started, where you can access the vault by any WebDAV client or mounting it into your filesystem manually.
 
 ### Windows via Windows Explorer
 
@@ -64,54 +62,9 @@ sudo umount /media/your/mounted/folder
 ### macOS via AppleScript
 
 Mount the vault with:
-
 ```sh
 osascript -e 'mount volume "http://localhost:8080/demoVault/"'
 ```
-
-Unmount the vault with:
-
-```sh
-osascript -e 'tell application "Finder" to if "demoVault" exists then eject "demoVault"'
-```
-
-## Using as a Docker image
-
-### Bridge Network with Port Forwarding
-
-:warning: **WARNING: This approach should only be used to test the containerized approach, not in production.** :warning:
-
-The reason is that with port forwarding, you need to listen on all interfaces. Other devices on the network could also access your WebDAV server and potentially expose your secret files.
-
-Ideally, you would run this in a private Docker network with trusted containers built by yourself communicating with each other. **Again, the below example is for testing purposes only to understand how the container would behave in production.**
-
-```sh
-docker run --rm -p 8080:8080 \
-    -v /path/to/vault:/vaults/vault \
-    -v /path/to/differentVault:/vaults/differentVault \
-    -v /path/to/fileWithPassword:/passwordFile \
-    cryptomator/cli \
-    --bind 0.0.0.0 --port 8080 \
-    --vault demoVault=/vaults/vault --password demoVault=topSecret \
-    --vault otherVault=/vaults/differentVault --passwordfile otherVault=/passwordFile
-# You can now mount http://localhost:8080/demoVault/
-```
-
-### Host Network
-
-```sh
-docker run --rm --network=host \
-    -v /path/to/vault:/vaults/vault \
-    -v /path/to/differentVault:/vaults/differentVault \
-    -v /path/to/fileWithPassword:/passwordFile \
-    cryptomator/cli \
-    --bind 127.0.0.1 --port 8080 \
-    --vault demoVault=/vaults/vault --password demoVault=topSecret \
-    --vault otherVault=/vaults/differentVault --passwordfile otherVault=/passwordFile
-# You can now mount http://localhost:8080/demoVault/
-```
-
-Then you can access the vault using any WebDAV client.
 
 ## License
 
